--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Austin for Everyone
+description: We say yes to more neighbors, better public transit, and better infrastructure in our backyards.
